--- a/complaints/templates/complaints/complaint_detail.html
+++ b/complaints/templates/complaints/complaint_detail.html
@@ -110,6 +110,17 @@
 
 {% block content %}
 <div class="container-fluid">
+
+    <!-- Action Buttons -->
+    <div class="row mb-4">
+        <div class="col-12">
+            <button class="btn btn-primary" data-toggle="modal" data-target="#statusModal">تحديث الحالة</button>
+            <button class="btn btn-info" data-toggle="modal" data-target="#assignModal">تعيين</button>
+            <button class="btn btn-warning" data-toggle="modal" data-target="#escalateModal">تصعيد</button>
+            <button class="btn btn-success" data-toggle="modal" data-target="#resolveModal">حل الشكوى</button>
+        </div>
+    </div>
+
     <!-- Page Header -->
     <nav aria-label="breadcrumb" class="mb-3">
         <ol class="breadcrumb">
@@ -718,6 +729,90 @@
     </div>
 </div>
 {% endblock %}
+
+<!-- Action Modals -->
+<div class="modal fade" id="statusModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <form method="post" action="{% url 'complaints:complaint_status_update' complaint.pk %}">
+                {% csrf_token %}
+                <div class="modal-header">
+                    <h5 class="modal-title">تحديث حالة الشكوى</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    {{ status_form.as_p }}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">إغلاق</button>
+                    <button type="submit" class="btn btn-primary">حفظ التغييرات</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="assignModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <form method="post" action="{% url 'complaints:complaint_assignment' complaint.pk %}">
+                {% csrf_token %}
+                <div class="modal-header">
+                    <h5 class="modal-title">تعيين الشكوى</h5>
+                </div>
+                <div class="modal-body">
+                    {{ assignment_form.as_p }}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">إغلاق</button>
+                    <button type="submit" class="btn btn-primary">حفظ</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="escalateModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <form method="post" action="{% url 'complaints:complaint_escalate' complaint.pk %}">
+                {% csrf_token %}
+                <div class="modal-header">
+                    <h5 class="modal-title">تصعيد الشكوى</h5>
+                </div>
+                <div class="modal-body">
+                    {{ escalation_form.as_p }}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">إغلاق</button>
+                    <button type="submit" class="btn btn-danger">تصعيد</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="resolveModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <form method="post" action="{% url 'complaints:complaint_resolve' complaint.pk %}">
+                {% csrf_token %}
+                <div class="modal-header">
+                    <h5 class="modal-title">حل الشكوى</h5>
+                </div>
+                <div class="modal-body">
+                    {{ resolution_form.as_p }}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">إغلاق</button>
+                    <button type="submit" class="btn btn-success">حل</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 {% block extra_js %}
 <script>
